Update copyrights; links to https; MODX to MODX

--- a/core/components/captcha/docs/tutorial.html
+++ b/core/components/captcha/docs/tutorial.html
@@ -1,4 +1,4 @@
-<p>This utility provides <a href="http://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> verification in the MODx
+<p>This utility provides <a href="https://en.wikipedia.org/wiki/CAPTCHA">CAPTCHA</a> verification in the MODX
 Manager login and elsewhere.</p>
 
 
