Add lock out note to docs

--- a/core/components/captcha/docs/tutorial.html
+++ b/core/components/captcha/docs/tutorial.html
@@ -45,7 +45,31 @@ as long as there is at least one .ttf file there.</p>
 <p>You may add or delete images from the <code>core/components/captcha/noise</code> directory
 as long as there is at least one file there.</p>
 
-<p>Captcha can also be used in other forms that require captcha.</p>
+<div class="box">
+    <p><b>Locked out of the Manager by Captcha?</b></p>
+
+    <p>If for any reason Captcha locks you out of the Manager. You can disable it with these actions:</p>
+    <ul>
+        <li>In the database, edit the <code>modx_site_plugins</code> table.</li>
+        <li>Click on the &quot;name&quot; field heading to sort by plugin name.</li>
+        <li>Edit the Captcha plugin record and set the <code>disabled</code> field to <code>1</code>.</li>
+        <li>Click on the &quot;Go&quot; button.<br></li>
+
+        <li>Also in the database, edit the <code>modx_system_settings</code> table.</li>
+        <li>Click on the &quot;key&quot; field heading to sort the list.</li>
+        <li>Edit the <code>captcha.enabled</code> record and set the value to <code>0</code>.</li>
+        <li>Click on the &quot;Go&quot; button.<br></li>
+
+        <li>In File Manager, delete all files in the <code>core/cache</code> directory.</li>
+    </ul>
+
+    <p>At this point, you should be able to log in to the MODX Manager.</p>
+
+
+
+</div>
+
+<p>Captcha can also be used in other login forms that require captcha.</p>
 
 <p>You can roll your own function by placing the code below where you want the CAPTCHA image to appear and then, when processing the form, comparing the user's input to the <code>$_SESSION['veriword']</code> variable.</p>
 
